<resources>
    <string name="app_name">Demo App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_team">Team</string>
    <string name="nav_enquiry">Enquiry</string>
    <string name="nav_departments">Departments</string>
    <string name="nav_contact">Contact</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>team</item>
        <item>Enquiry</item>
        <item>Departments</item>
        <item>Contact</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>


    <string-array name="cardview_title">
        <item>Enquiry</item>
        <item>Chartered Accountants</item>
        <item>Services</item>
        <item>Locations</item>
        <item>Contact</item>
    </string-array>


</resources>
