<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_photos"
            android:icon="@drawable/ic_team_black_24dp"
            android:title="@string/nav_team" />
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_enquiry_black_24dp"
            android:title="@string/nav_enquiry" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_department_black_24dp2"
            android:title="@string/nav_departments" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_contact_black_24dp"
            android:title="@string/nav_contact" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>